# shakemon

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yml
examples/: random_description.rs
src/: configuration.rs  errors.rs  lib.rs  main.rs  pokeapi.rs  shakespeare.rs  telemetry.rs
src/external_services/: mod.rs  pokeapi.rs  shakespeare.rs
src/routes/: mod.rs  pokemon.rs
tests/: common.rs  data.rs  health_check.rs  pokemon.rs  test_configuration.yml  utils.rs
