[package]
name = "shakespeare_pokemon"
version = "0.1.0"
authors = ["crash <crash@inventati.org>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
config = "0.10.1"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.10.9"
tokio = "0.2.24"  # This must be the same version that actix uses
