[package]
name = "shakemon"
version = "0.1.0"
authors = ["crash <crash@inventati.org>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shakemon"

[dependencies]
actix-rt = "1.1.1"
actix-web = { version = "3.3.2", features = ["rustls"] }
config = "0.10.1"
log = "0.4.11"
lru = "0.6.2"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1", features = ["derive"]}
tokio = { version = "0.2.24", features = ["sync", "rt-threaded", "macros"] }  # This must be the same version that actix uses

[dev-dependencies]
wiremock = "0.3.0"
rand = "0.7"
